--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
@@ -214,6 +214,7 @@
 
         if (selected == '') {
             msg.WithError('Please select data!');
+            NonLoading();
             return false;
         }
 
