--- a/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/Index.cshtml
@@ -130,15 +130,15 @@
                     <div>
                         @Html.Hidden("StyleUkey")
                         <label class="QueryLab">Brand</label>
-                        <input type="text" name="BrandID" id="txtBrand" />
+                        <input type="text" name="BrandID" class="searchText8vw" id="txtBrand" />
                         <input id="btnBrandSelectItem" type="button" class="site-btn btn-blue" style="margin:0;border:0;" name="BrandSelectItem" value="..." />
                         &nbsp;&nbsp;
                         <label class="QueryLab">Season</label>
-                        <input type="text" name="SeasonID" id="txtSeason" />
+                        <input type="text" name="SeasonID" class="searchText5vw" id="txtSeason" />
                         <input id="btnSeasonSelectItem" type="button" class="site-btn btn-blue" style="margin:0;border:0;" name="SeasonSelectItem" value="..." />
                         &nbsp;&nbsp;
                         <label class="QueryLab">Style</label>
-                        <input type="text" name="StyleID" id="txtStyle" />
+                        <input type="text" name="StyleID" class="searchText12vw" id="txtStyle" />
                         <input id="btnStyleSelectItem" type="button" class="site-btn btn-blue" style="margin:0;border:0;" name="StyleSelectItem" value="..." />
                         &nbsp;&nbsp;
                         <input type="submit" name="name" id="btnQuery" value="Query" />
