--- a/Quality/Quality/Views/Shared/_Layout.cshtml
+++ b/Quality/Quality/Views/Shared/_Layout.cshtml
@@ -133,6 +133,15 @@
         .swal2-title {
             font-size: 10px;
         }
+        .searchText5vw {
+            width: 5.5vw;
+        }
+        .searchText8vw{
+            width:8.5vw;
+        }
+        .searchText12vw {
+            width: 12.5vw;
+        }
     </style>
 </head>
 <body class="site-bg">
